--- a/tycam/face.html
+++ b/tycam/face.html
@@ -14,34 +14,36 @@
 
 <body>
   
-  <!-- CONTENTS -->
   <div class="container" style="margin-top: 20px;">
     <div class="columns">
       
-      <!-- WEBCAM INPUT -->
       <div class="column">
         <article class="panel is-info">
-
           <div class="panel-block">
             <video class="input_video1"></video>
           </div>
         </article>
       </div>
 
-      <!-- MEDIAPIPE OUTPUT -->
       <div class="column">
         <article class="panel is-info">
-
           <div class="panel-block">
             <canvas class="output1" width="480px" height="480px"></canvas>
           </div>
         </article>
       </div>
+
+      <div class="display_xy">
+      </div>
+
     </div>
     
     <div class="loading">
       <div class="spinner"></div>
     </div>
+
+    <button id="captureBtn" class="button is-primary">Capture</button>
+    <div id="capturedImageContainer"></div>
   </div>
 
   <script type="text/javascript" src="./face.js"></script>
